apps/crypto-price-render/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: crypto-price-render
  name: crypto-price-render
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-price-render
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        app: crypto-price-render
    spec:
      containers:
        - name: crypto-price-render
          image: gundua/crypto-price-render:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: '0.5Gi'
              cpu: '0.2'
            requests:
              memory: '0.5Gi'
              cpu: '0.2'
      restartPolicy: Always
status: {}
